betterdocs widgets order issue and extra spacing issue fixed

--- a/src/css/view/betterdocs-category-grid.scss
+++ b/src/css/view/betterdocs-category-grid.scss
@@ -28,7 +28,7 @@
 }
 
 .eael-bd-cg-body {
-  padding: 20px;
+  padding: 0px 20px 20px;
   ul {
     margin: 0;
     padding: 0;
